force-app/main/default/objects/Tag__c/Tag__c.object-meta.xml
<CustomObject>
    <label>Tag</label>
    <nameField>
        <displayFormat>TG-{000}</displayFormat>
        <label>Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>