force-app/main/default/objects/Tag__c/fields/Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closing_Reason</valueSetName>
    </valueSet>
</CustomField>