force-app/main/default/objects/Tag__c/fields/Primary_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Primary_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>Tags</relationshipName>
    <type>Lookup</type>
</CustomField>