force-app/main/default/objects/Tag__c/fields/Secondary_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tags (Secondary Recruiter)</relationshipLabel>
    <relationshipName>Tags1</relationshipName>
    <type>Lookup</type>
</CustomField>