force-app/main/default/objects/Tag__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Lightning Web Components</fullName>
            </value>
            <value>
                <fullName>Scrum Sales</fullName>
            </value>
            <value>
                <fullName>Cloud Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>