force-app/main/default/objects/Tag__c/fields/Tag_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Reminder_Date__c</fullName>
    <label>Tag Reminder Date</label>
    <type>Date</type>
</CustomField>