force-app/main/default/objects/Tag__c/fields/Tagged_For__c.field-meta.xml
<CustomField>
    <fullName>Tagged_For__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp;  Candidate__r.Recruitment_Flow__r.Account__r.Id &amp; &quot;/view&quot;,  Candidate__r.Recruitment_Flow__r.Account__r.Name)</formula>
    <label>Tagged For</label>
    <type>Text</type>
</CustomField>